--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ main img{
 .flex{
   display: flex;
 }
+.owl-stage{
+  display: flex;
+  align-items: center;
+}
+
 
 /*Header*/
 
@@ -92,12 +97,14 @@ h1{
 .main_banner .container{
   align-items: center;
   justify-content: space-between;
-  position: relative;
 }
 .bg-img{
   display: block;
-  position: absolute;
-  right: -100px;
+  position: relative;
+  right: -85px;
+}
+.bg-img img{
+  width: 100%;
 }
 
 
@@ -106,6 +113,7 @@ h1{
   text-align: center;
   background: #E5E5E5;
 }
+
 .best-sellers h3{
   margin-bottom: 27px;
 }
@@ -157,6 +165,19 @@ h1{
 }
 .cards img{
   display: block;
+  width: 100%;
+}
+.owl-nav .owl-prev{
+  position: absolute;
+  left: -10px;
+  top: 30px;
+}
+.owl-nav .owl-prev:before{
+  font-weight: 900;
+  font-family: "Font Awesome 6 Free";
+  content: "\f053";
+  color: #FFFFFF;
+  font-size: 30px;
 }
 
 .pers_block{
