--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,7 @@ main img{
 .flex{
   display: flex;
 }
-.owl-stage{
-  display: flex;
-  align-items: center;
-}
+
 
 
 /*Header*/
@@ -223,4 +220,237 @@ h1{
   line-height: 20px;
   text-decoration-line: underline;
   color: #000000;
+}
+.features{
+  padding: 190px 0 50px 0;
+}
+.features .container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.features h4{
+  color: #000;
+  text-align: center;
+  font-size: 36px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.items{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 65px;
+}
+.point{
+  width: 330px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.point img{
+  max-width: 50px;
+}
+.point p{
+  color: #000;
+  text-align: center;
+  font-size: 30px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-top: 15px;
+}
+.guide{
+  padding: 160px 0 290px 0;
+  background: linear-gradient(
+        to bottom,
+        white 0%,
+        white 50%,                                                                 
+        lightgrey 50%,
+        lightgrey 100%
+    );
+}
+.main_p{
+  color: #000;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.persons{
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.people{
+  max-width: 288px;
+}
+.people img{
+  position: relative;
+  top: 20px;
+}
+.people p:first-of-type{
+  color: #000;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.6px;
+  margin-top: 20px
+}
+.people p{
+  color: #000;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 15px;
+}
+.people a{
+  display: inline-block;
+  color: #000;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration-line: underline;
+}
+.discover{
+  display: flex;
+  justify-content: center;
+}
+.card_wrap{
+  padding: 85px 0 90px 0;
+}
+.card_wrap h3{
+  color: #000;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.card_wrap p{
+  color: #000;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+form{
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 365px;
+  justify-content: space-between;
+}
+.name{
+  width: 153px;
+  height: 39px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.email{
+  width: 366px;
+  height: 39px;
+  margin-bottom: 20px;
+}
+input{
+  width: 100%;
+  padding: 12px 8px;
+  border: 1px solid #000;
+  color: #A0A0A0;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.register{
+  display: flex;
+  justify-content: center;
+}
+button{
+  color: #FFF;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border-radius: 100px;
+  border: 1px solid #000;
+  background: #000;
+  padding: 8px 23px;
+}
+.butto{
+  margin: auto;
+}
+
+
+/*footer   */
+footer{
+  background-color: #000;
+  padding: 50px 0 16px 0;
+}
+.first_item{
+  display: flex;
+  justify-content: space-between;
+}
+.right_side{
+  display: flex;
+}
+.right_side ul{
+  list-style: none;
+  margin-left: 25px;
+}
+.right_side ul li{
+  color: #FFF;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+}
+.right_side ul li:first-of-type{
+  color: #FFF;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23.1px;
+  margin-bottom: 20px;
+}
+
+.foot_links{
+  max-width: 130px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.sec_item p{
+  color: #FFF;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23.1px;
+  margin-top: 20px;
 }
