--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ main img{
 }
 
 
-
 /*Header*/
 
 header{
@@ -38,9 +37,7 @@ header ul{
 header ul li{
   margin-right: 28px;
 }
-header nav ul li:last-of-type{
-  margin-right: 0;
-}
+
 header ul li a{
   text-decoration: none;
   font-family: 'Roboto';
@@ -97,8 +94,7 @@ h1{
 }
 .bg-img{
   display: block;
-  position: relative;
-  right: -85px;
+  margin-left: 180px;
 }
 .bg-img img{
   width: 100%;
@@ -164,19 +160,54 @@ h1{
   display: block;
   width: 100%;
 }
+.owl-item{
+  text-align: center;
+}
+.owl-stage{
+  display: flex;
+  align-items: center;
+}
 .owl-nav .owl-prev{
   position: absolute;
-  left: -10px;
-  top: 30px;
+  left: -50px;
+  top: 300px;
 }
-.owl-nav .owl-prev:before{
+.owl-nav .owl-prev::before{
   font-weight: 900;
   font-family: "Font Awesome 6 Free";
-  content: "\f053";
-  color: #FFFFFF;
+  content: "\f137";
   font-size: 30px;
+  color: rgb(43, 43, 207);
+}
+.owl-nav .owl-next{
+  position: absolute;
+  right: -50px;
+  top: 300px;
+}
+.owl-nav .owl-next::before{
+  font-weight: 900;
+  font-family: "Font Awesome 6 Free";
+  content: "\f137";
+  font-size: 30px;
+  color: rgb(43, 43, 207);
+  transform: rotate(180deg);
+  display: inline-block;
 }
 
+.owl-dots .owl-dot span{
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background: aqua;
+  border-radius: 50%;
+}
+.owl-dot{
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+}
 .pers_block{
   padding: 50px 0 70px 0;
 }
