--- a/css/works.css
+++ b/css/works.css
@@ -1,62 +1,76 @@
-@import "menu_mobile.css";
 @import "owl.carousel.css";
 @import "owl.theme.default.css";
-@import "style.css";
-@import "media.css";
+:root h1, :root h2, :root h3, :root h4, :root h5, :root h6, :root p, :root a, :root label {
+  font-family: "Poppins", sans-serif;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-main img {
+
+img {
   display: block;
 }
+
 .container {
-  max-width: 1064px;
+  max-width: 1024px;
   margin: auto;
 }
+
 .flex {
   display: flex;
 }
+
 header {
   padding: 16px 0;
 }
 header .container {
+  max-width: 1200px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 header ul {
   list-style: none;
   align-items: center;
   display: flex;
+  gap: 32px;
 }
-header ul li {
-  margin-right: 28px;
-}
-header ul li a {
+header ul a {
   text-decoration: none;
-  font-family: Roboto;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 26px;
   color: black;
 }
-header ul li a img {
+header ul a img {
   max-width: 30px;
 }
+
 .logo {
   position: absolute;
   top: 22px;
   left: calc(50% - 40px);
 }
-.contacts li {
-  margin-right: 10px;
+
+.contacts {
+  display: flex;
+  gap: 32px;
+  justify-content: space-between;
+  align-items: center;
 }
-.contacts li:first-of-type {
-  margin-right: 16px;
+
+.main_banner {
+  padding: 90px 0;
+  background: #F0EFEB;
 }
-h1 {
+.main_banner article {
+  max-width: 534px;
+}
+.main_banner article h1 {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -65,14 +79,7 @@ h1 {
   color: #000000;
   margin-bottom: 42px;
 }
-.main_banner {
-  padding: 90px 0;
-  background: #F0EFEB;
-}
-.main_banner article {
-  max-width: 534px;
-}
-.main_banner p {
+.main_banner article p {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -81,7 +88,7 @@ h1 {
   color: #000000;
   margin-bottom: 26px;
 }
-.main_banner a {
+.main_banner article a {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -98,31 +105,41 @@ h1 {
   align-items: center;
   justify-content: space-between;
 }
+
 .bg-img {
-  display: block;
-  margin-left: 180px;
+  max-width: 420px;
 }
 .bg-img img {
   width: 100%;
+  display: block;
 }
+
 .best-sellers {
-  padding: 60px 0 240px 0;
+  padding: 60px 0 140px 0;
   text-align: center;
   background: #E5E5E5;
 }
-.best-sellers h3 {
+.best-sellers .cards_text {
+  max-width: 632px;
+  margin: auto;
+}
+.best-sellers .cards_text h3 {
   margin-bottom: 27px;
 }
-.best-sellers p {
+.best-sellers .cards_text p {
   margin-bottom: 47px;
 }
-.best-sellers h2 {
-  margin: 88px 0 50px 0;
+.best-sellers .cards_text h2 {
+  margin: 68px 0 20px 0;
 }
-.cards {
+.best-sellers .card_wrap {
+  justify-content: space-between;
+  padding: 48px 0 90px;
+}
+.best-sellers .card_wrap .cards {
   max-width: 315px;
 }
-.cards h4 {
+.best-sellers .card_wrap .cards h4 {
   margin: 27px 0 17px;
   font-family: "Roboto";
   font-style: normal;
@@ -132,7 +149,7 @@ h1 {
   text-align: center;
   color: #000000;
 }
-.cards p {
+.best-sellers .card_wrap .cards p {
   margin-bottom: 10px;
   font-family: "Roboto";
   font-style: normal;
@@ -142,7 +159,7 @@ h1 {
   text-align: center;
   color: #000000;
 }
-.cards a {
+.best-sellers .card_wrap .cards a {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -152,84 +169,40 @@ h1 {
   text-decoration-line: underline;
   color: #000000;
 }
-.cards img {
+.best-sellers .card_wrap .cards img {
   display: block;
   width: 100%;
 }
-.cards_text {
-  max-width: 632px;
-  margin: auto;
-}
-.card_wrap {
-  justify-content: space-between;
-}
+
 .owl-item {
   text-align: center;
   display: flex;
   justify-content: center;
 }
+
 .owl-stage {
   display: flex;
   align-items: center;
 }
-.owl-nav .owl-prev {
-  position: absolute;
-  left: -50px;
-  top: 300px;
-}
-.owl-nav .owl-prev:before {
-  font-weight: 900;
-  font-family: "Font Awesome 6 Free";
-  content: "\f137";
-  font-size: 30px;
-  color: rgb(43, 43, 207);
-}
-.owl-nav .owl-next {
-  position: absolute;
-  right: -50px;
-  top: 300px;
-}
-.owl-nav .owl-next:before {
-  font-weight: 900;
-  font-family: "Font Awesome 6 Free";
-  content: "\f137";
-  font-size: 30px;
-  color: rgb(43, 43, 207);
-  transform: rotate(180deg);
-  display: inline-block;
-}
-.owl-dots .owl-dot span {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  background: aqua;
-  border-radius: 50%;
-}
-.owl-dot {
-  bottom: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  position: absolute;
-}
+
 .pers_block {
   padding: 50px 0 70px 0;
 }
 .pers_block .container {
   max-width: 1164px;
 }
-.pers_content {
+.pers_block .container .pers_content {
   flex-direction: column;
   justify-content: center;
   margin: 0 50px;
 }
-.bg_white {
+.pers_block .container .bg_white {
   background: #FFFFFF;
 }
-.bg_grey {
+.pers_block .container .bg_grey {
   background: rgba(204, 204, 204, 0.6);
 }
-.pers_block h3 {
+.pers_block .container h3 {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -238,7 +211,7 @@ h1 {
   color: #000000;
   margin-bottom: 30px;
 }
-.pers_block p {
+.pers_block .container p {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -247,7 +220,7 @@ h1 {
   color: #000000;
   margin-bottom: 40px;
 }
-.pers_block a {
+.pers_block .container a {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -256,6 +229,7 @@ h1 {
   text-decoration-line: underline;
   color: #000000;
 }
+
 .features {
   padding: 190px 0 50px 0;
 }
@@ -264,7 +238,7 @@ h1 {
   flex-direction: column;
   justify-content: center;
 }
-.features h4 {
+.features .container h4 {
   color: #000;
   text-align: center;
   font-size: 36px;
@@ -273,22 +247,22 @@ h1 {
   font-weight: 400;
   line-height: normal;
 }
-.items {
+.features .container .items {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 65px;
 }
-.point {
+.features .container .point {
   width: 330px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.point img {
+.features .container .point img {
   max-width: 50px;
 }
-.point p {
+.features .container .point p {
   color: #000;
   text-align: center;
   font-size: 30px;
@@ -298,44 +272,45 @@ h1 {
   line-height: normal;
   margin-top: 15px;
 }
+
 .guide {
   padding: 160px 0 290px 0;
   background: linear-gradient(to bottom, white 0%, white 50%, lightgrey 50%, lightgrey 100%);
 }
-.main_p {
+.guide .main_p {
   color: #000;
   text-align: center;
-  font-family: Roboto;
+  font-family: "Roboto";
   font-size: 36px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
 }
-.persons {
+.guide .persons {
   margin-top: 40px;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
 }
-.people {
+.guide .people {
   max-width: 288px;
 }
-.people img {
+.guide .people img {
   position: relative;
   top: 20px;
 }
-.people a {
+.guide .people a {
   display: inline-block;
   color: #000;
   text-align: center;
-  font-family: Roboto;
+  font-family: "Roboto";
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   text-decoration-line: underline;
 }
-.people p {
+.guide .people p {
   color: #000;
   text-align: center;
   font-family: Roboto;
@@ -345,7 +320,7 @@ h1 {
   line-height: normal;
   margin-bottom: 15px;
 }
-.people p:first-of-type {
+.guide .people p:first-of-type {
   color: #000;
   text-align: center;
   font-family: Roboto;
@@ -356,10 +331,11 @@ h1 {
   letter-spacing: 0.6px;
   margin-top: 20px;
 }
-.discover {
+.guide .discover {
   display: flex;
   justify-content: center;
 }
+
 .card_wrap {
   padding: 85px 0 90px 0;
 }
@@ -381,24 +357,24 @@ h1 {
   font-weight: 700;
   line-height: normal;
 }
-form {
+.card_wrap form {
   display: flex;
   flex-wrap: wrap;
   max-width: 365px;
   justify-content: space-between;
 }
-.name {
+.card_wrap .name {
   width: 153px;
   height: 39px;
   margin-top: 30px;
   margin-bottom: 20px;
 }
-.email {
+.card_wrap .email {
   width: 366px;
   height: 39px;
   margin-bottom: 20px;
 }
-input {
+.card_wrap input {
   width: 100%;
   padding: 12px 8px;
   border: 1px solid #000;
@@ -409,11 +385,11 @@ input {
   font-weight: 400;
   line-height: normal;
 }
-.register {
+.card_wrap .register {
   display: flex;
   justify-content: center;
 }
-button {
+.card_wrap button {
   color: white;
   text-align: center;
   font-family: Roboto;
@@ -426,17 +402,20 @@ button {
   background: #000;
   padding: 8px 23px;
 }
-.butto {
+.card_wrap .butto {
   margin: auto;
 }
+
 footer {
   background-color: #000;
   padding: 50px 0 16px 0;
 }
+
 .first_item {
   display: flex;
   justify-content: space-between;
 }
+
 .right_side {
   display: flex;
 }
@@ -461,12 +440,14 @@ footer {
   line-height: 23.1px;
   margin-bottom: 20px;
 }
+
 .foot_links {
   max-width: 130px;
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
 }
+
 .sec_item p {
   color: #FFF;
   text-align: center;
